--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,20 +9,23 @@
     <link rel="stylesheet" href="css/index.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="overlay" id="overlay">
-        <div class="modal" id="modal">
-            
+        <div class="modal-wrapper">
+            <div class="icn-close">
+                <img src="assets/times-solid.svg" alt="" width="22" height="22" >
+            </div>
+            <div id="modal" class="modal"></div>
         </div>
     </div>
     <div class="page">
         <header class="header">
             <h1>AWESOME STARTUP EMPLOYEE DIRECTORY</h1>
         </header>
-        <main class="main" id="main">
-           
-        </main>
+        <main class="main" id="main"></main>
     </div>
     <script src="js/app.js"></script>
 </body>
+
 </html>
