--- a/index.html
+++ b/index.html
@@ -14,15 +14,18 @@
     <div class="overlay" id="overlay">
         <div class="modal-wrapper">
             <div class="icn-close">
-                <img src="assets/times-solid.svg" alt="" width="22" height="22">
+                <svg class="icn-close" aria-hidden="true" data-prefix="fas" data-icon="times" class="svg-inline--fa fa-times fa-w-11"
+                    role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 352 512">
+                    <path fill="#333" d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"></path>
+                </svg>
             </div>
             <div id="modal" class="modal"></div>
         </div>
-
     </div>
     <div class="page">
         <header class="header">
-            <h1>AWESOME STARTUP EMPLOYEE DIRECTORY</h1>
+            <h1 class="header__title">AWESOME STARTUP EMPLOYEE DIRECTORY</h1>
+            <input class="header__search" id="searchBar" type="text" placeholder="Start Typing To Search">
         </header>
         <main class="main" id="main"></main>
     </div>
